--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -321,6 +321,10 @@
   background-color: @main-color;
 }
 
+.footer__copyright-content {
+  margin-bottom: 10px;
+}
+
 .footer__copyright-content svg {
   fill: red;
 }
@@ -360,6 +364,13 @@
 
   .footer__form-contact-wrapper {
     width: 65%;
+  }
+}
+
+@media (min-width: 586px) {
+
+  .footer__copyright-content {
+    margin-bottom: 0;
   }
 }
 
