--- a/less/blocks/welcome-to-shop-slider.less
+++ b/less/blocks/welcome-to-shop-slider.less
@@ -74,8 +74,8 @@
 
 @media (min-width: 550px) {
 
-  .carousel-control.left,
-  .carousel-control.right {
+.welcome-to-shop .carousel-control.left,
+.welcome-to-shop .carousel-control.right {
     display: block;
     background-image: none;
   }
