--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -238,19 +238,20 @@
 }
 
 .btn--buy {
-  margin-bottom: 20px;
-
   padding-top: 15px;
   padding-right: 25px;
   padding-bottom: 15px;
   padding-left: 25px;
 
-  width: 200px;
+  width: 60%;
 
-  background-color: transparent;
-  color: @style-color;
-  border-color: @style-color;
-  border-radius: 15px;
+  background-color: @main-color;
+  color: #fff;
+  border-color: @main-color;
+
+  font-weight: 600;
+
+  border-radius: 6px;
   transition: all 0.8s;
 
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
@@ -258,7 +259,7 @@
 
   &:hover {
     color: #fff;
-    background-color: @style-color;
+    background-color: lighten(@main-color, 10%);
     border-color: @style-color;
     transition: all 0.8s;
   }
