--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,5 +1,5 @@
 .feature {
-
+  background-color: #f7f7f7;
 }
 
 .feature .container-article {
@@ -41,6 +41,17 @@
 .feature-item__icon {
   font-size: 40px;
   color: @style-color;
+
+  padding-top: 15px;
+  padding-right: 15px;
+  padding-bottom: 15px;
+  padding-left: 15px;
+
+  background-color: #fff;
+
+  border-radius: 50%;
+
+  box-shadow: 0 0px 10px -1px #00a3ec;
 
   transform: scale(1);
   transition: all 0.4s;
