--- a/less/blocks/single-product.less
+++ b/less/blocks/single-product.less
@@ -158,19 +158,163 @@
   background-color: #fff;
 }
 
-.single-product__img {
-
-}
-
-.single-product__pre-order-content {
-  margin-bottom: 20px;
-
-  text-align: center;
-}
-
 .single-product__button-wrapper {
   width: 80%;
   text-align: left;
+}
+
+.single-product__list-item-aquel-200-one,
+.single-product__list-item-aquel-200-two,
+.single-product__list-item-aquel-200-three {
+  position: relative;
+  margin-bottom: 35px;
+  padding: 10px;
+  padding-left: 40px;
+
+  font-size: 16px;
+  font-weight: 600;
+
+  background-color: #fff;
+}
+
+.single-product__list-item-aquel-200-one::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
+}
+
+.single-product__list-item-aquel-200-two::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
+}
+
+.single-product__list-item-aquel-200-three::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
+}
+
+.single-product__list-item-aquel-zero-one,
+.single-product__list-item-aquel-zero-two,
+.single-product__list-item-aquel-zero-three {
+  position: relative;
+  margin-bottom: 35px;
+  padding: 10px;
+  padding-left: 40px;
+
+  font-size: 16px;
+  font-weight: 600;
+
+  background-color: #fff;
+}
+
+.single-product__list-item-aquel-zero-one::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
+}
+
+.single-product__list-item-aquel-zero-two::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
+}
+
+.single-product__list-item-aquel-zero-three::before {
+  display: block;
+  content: " ";
+  position: absolute;
+
+  width: 65px;
+  height: 65px;
+
+  top: -10px;
+  left: -50px;
+
+  background-color: #fff;
+  background-image: url(../../img/icon/like.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 60px;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
+  border-radius: 50%;
 }
 
 @media (min-width: 768px) {
