--- a/less/blocks/card.less
+++ b/less/blocks/card.less
@@ -32,9 +32,9 @@
   padding-left: 20px;
   padding-right: 20px;
 
-  border-radius: 2px;
-
-  transition: all 0.5s;
+  &:hover img {
+    transform: scale(1.1);
+  }
 }
 
 .card img {
