--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -6,8 +6,6 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-
-  border-bottom: 4px solid @main-color;
 }
 
 .footer__map {
@@ -189,11 +187,12 @@
   align-items: center;
   flex-wrap: wrap;
 
-  max-width: 1300px;
   margin: 0 auto;
   padding: 20px;
 
   font-size: 12px;
+
+  border-top: 4px solid @main-color;
 }
 
 .footer__catalog {
@@ -233,9 +232,7 @@
 .footer__catalog-list-item a {
   display: block;
 
-  padding-top: 5px;
   padding-right: 10px;
-  padding-bottom: 5px;
   padding-left: 10px;
 
   color: @text-color;
