--- a/less/blocks/dividers.less
+++ b/less/blocks/dividers.less
@@ -6,6 +6,7 @@
 
 .divider-main--card {
   margin-bottom: 20px;
+  background-color: @main-color;
 }
 
 .divider-main--info {
@@ -14,7 +15,11 @@
 }
 
 .divider-main--about {
+  margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 20px;
+
+  width: 50%;
 }
 
 .divider-main--blog-single {
