--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-.about {
-  padding-top: 20px;
-}
 .about .container-article {
   display: -ms-flexbox;
   display: flex;
@@ -17,12 +14,11 @@
       flex-direction: column;
   width: 90%;
   margin-bottom: 20px;
-  padding-top: 20px;
   padding-right: 20px;
   padding-bottom: 20px;
   padding-left: 20px;
   border-radius: 2px;
-  background-color: #fff1de;
+  border: 1px solid #00a3ec;
   box-sizing: border-box;
   text-align: center;
   transition: all 0.5s;
@@ -31,15 +27,31 @@
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.5s;
 }
+.about__card--main {
+  padding-right: 0;
+  padding-left: 0;
+}
 .about__card:nth-of-type(5) {
   text-align: left;
 }
 .about__title {
+  display: block;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 18px;
   font-weight: 600;
   text-align: center;
 }
+.about__title--background {
+  margin-bottom: 20px;
+  color: #fff;
+  background-color: #00a3ec;
+}
 .about__content {
+  padding-right: 20px;
+  padding-left: 20px;
   font-size: 16px;
 }
 .about__contact {
@@ -50,9 +62,15 @@
   padding-left: 0;
   list-style: none;
 }
+.about__details-content {
+  font-weight: 600;
+}
+.about__details-content a {
+  color: #777777;
+}
 @media (min-width: 768px) {
   .about .container-article {
-    width: 80%;
+    max-width: 1200px;
   }
   .about__card {
     width: 45%;
@@ -544,20 +562,26 @@ input.advice-form__phone {
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
 }
 .blog-teaser__card {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   width: 100%;
+  border-bottom: 3px solid #00a3ec;
   border-radius: 2px;
   transition: all 0.5s;
-  background-color: #fff1de;
+  box-shadow: 0 1px 0px 0 rgba(0, 0, 0, 0.16), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
   box-sizing: border-box;
 }
 .blog-teaser__card:hover {
   transition: all 0.5s;
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 0px 10px 0px #00a3ec;
+}
+.blog-teaser__card:hover .blog-teaser__continue,
+.blog-teaser__card:hover .blog-teaser__title {
+  color: #00a3ec;
+  transition: all 0.5s;
 }
 .blog-teaser__action {
   display: block;
@@ -587,12 +611,19 @@ input.advice-form__phone {
   background-color: rgba(0, 0, 0, 0.3);
 }
 .blog-teaser__content-wrapper {
-  padding-right: 20px;
+  padding-right: 30px;
   padding-bottom: 20px;
-  padding-left: 20px;
+  padding-left: 30px;
+}
+.blog-teaser__title {
+  transition: all 0.5s;
 }
 .blog-teaser__content {
   margin-top: 20px;
+}
+.blog-teaser__continue {
+  font-weight: 600;
+  transition: all 0.5s;
 }
 .blog-single .container-article {
   width: 90%;
@@ -643,13 +674,13 @@ input.advice-form__phone {
 }
 @media (min-width: 768px) {
   .blog .container-article {
-    width: 80%;
+    max-width: 1150px;
   }
   .blog-teaser__card {
-    width: 45%;
+    width: 48%;
   }
   .blog-teaser__card--full {
-    width: 95%;
+    width: 100%;
   }
   .blog-single .container-article {
     width: 80%;
@@ -854,7 +885,7 @@ a:active {
 .btn--footer-callback:hover {
   color: #fff;
   background-color: #20baff;
-  border-color: #00a3ec;
+  border-color: #20baff;
   transition: all 0.8s;
 }
 .btn--welcome-to-shop {
@@ -1090,13 +1121,13 @@ a:active {
 .btn-footer__form:hover {
   color: #fff;
   background-color: #20baff;
-  border-color: #00a3ec;
+  border-color: #20baff;
   transition: all 0.8s;
 }
 .btn-footer__form:focus {
   color: #fff;
-  background-color: #1eb1fc;
-  border-color: #1eb1fc;
+  background-color: #20baff;
+  border-color: #20baff;
 }
 .btn-footer__form:active {
   color: #fff !important;
@@ -1436,13 +1467,17 @@ a:active {
 }
 .divider-main--card {
   margin-bottom: 20px;
+  background-color: #00a3ec;
 }
 .divider-main--info {
   margin-top: 20px;
   margin-bottom: 20px;
 }
 .divider-main--about {
+  margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 20px;
+  width: 50%;
 }
 .divider-main--blog-single {
   margin-bottom: 20px;
@@ -1516,6 +1551,7 @@ a:active {
       flex-wrap: wrap;
   -ms-flex-pack: justify;
       justify-content: space-between;
+  border-top: 4px solid #00a3ec;
 }
 .footer__map {
   display: none;
@@ -2319,6 +2355,7 @@ a:active {
 .introduction--about-us {
   height: auto;
   padding-top: 30px;
+  padding-bottom: 10px;
   text-align: center;
 }
 .introduction--about-us .introduction__aquel-title svg {
@@ -2366,9 +2403,24 @@ a:active {
 .introduction--blog {
   height: auto;
   padding-top: 30px;
+  padding-bottom: 0;
 }
 .introduction--blog .introduction__title {
   margin-bottom: 20px;
+}
+.introduction__content--blog {
+  display: block;
+  width: 100%;
+  max-width: 1150px;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  font-size: 16px;
+  font-weight: 600;
+  text-align: center;
+  color: #fff;
+  background-color: #00a3ec;
 }
 .introduction--blog .introduction__aquel-title svg {
   margin-bottom: 20px;
