--- a/less/blocks/blog.less
+++ b/less/blocks/blog.less
@@ -9,25 +9,31 @@
 .blog-teaser {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .blog-teaser__card {
-  margin-bottom: 20px;
+  margin-bottom: 30px;
   width: 100%;
 
+  border-bottom: 3px solid @main-color;
   border-radius: 2px;
 
   transition: all 0.5s;
-
-  background-color: @bg-color-carrots;
+  box-shadow:  0 1px 0px 0 rgba(0, 0, 0, 0.16), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 
   &:hover {
     transition: all 0.5s;
-    box-shadow:  0 2px 5px 0 rgba(0,0,0,.16), 0 2px 10px 0 rgba(0,0,0,.12);
+    box-shadow: 1px 0px 10px 0px #00a3ec;
   }
 
   box-sizing: border-box;
+}
+
+.blog-teaser__card:hover .blog-teaser__continue,
+.blog-teaser__card:hover .blog-teaser__title, {
+  color: @main-color;
+  transition: all 0.5s;
 }
 
 .blog-teaser__action {
@@ -80,17 +86,22 @@
 
 
 .blog-teaser__content-wrapper {
-  padding-right: 20px;
+  padding-right: 30px;
   padding-bottom: 20px;
-  padding-left: 20px;
+  padding-left: 30px;
 }
 
 .blog-teaser__title {
-
+  transition: all 0.5s;
 }
 
 .blog-teaser__content {
   margin-top: 20px;
+}
+
+.blog-teaser__continue {
+  font-weight: 600;
+  transition: all 0.5s;
 }
 
 .blog-single {
@@ -175,15 +186,15 @@
 @media (min-width: 768px) {
 
   .blog .container-article {
-    width: 80%;
+    max-width: 1150px;
   }
 
   .blog-teaser__card {
-    width: 45%;
+    width: 48%;
   }
 
   .blog-teaser__card--full {
-    width: 95%;
+    width: 100%;
   }
 
   .blog-single .container-article {
