--- a/less/blocks/footer.less
+++ b/less/blocks/footer.less
@@ -6,6 +6,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+
+  border-top: 4px solid @main-color;
 }
 
 .footer__map {
