--- a/less/blocks/button.less
+++ b/less/blocks/button.less
@@ -11,6 +11,11 @@
   margin-bottom: 20px;
 }
 
+.back-wrapper--blog {
+  max-width: 1000px;
+  margin-bottom: 10px;
+}
+
 .back-button {
   display: inline-block;
   position: relative;
