--- a/less/blocks/feature.less
+++ b/less/blocks/feature.less
@@ -1,8 +1,10 @@
 .feature {
-  background-color: #f7f7f7;
+  border-top: 2px solid @main-color;
 }
 
 .feature .container-article {
+  max-width: 1100px;
+
   padding-bottom: 0;
 }
 
