--- a/less/blocks/introduction.less
+++ b/less/blocks/introduction.less
@@ -370,11 +370,26 @@
   height: auto;
 
   padding-top: 20px;
-  padding-bottom: 20px;
+  padding-bottom: 5px;
+  background-color: #f7f7f7;
 }
 
 .introduction--blog-single .introduction__title {
-  margin-bottom: 30px;
+  display: block;
+  width: 100%;
+  max-width: 1000px;
+
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  color: #fff;
+
+  font-size: 18px;
+  letter-spacing: 1px;
+
+  text-align: center;
+
+  background-color: @main-color;
 }
 
 .introduction__content--blog-single {
