--- a/less/blocks/blog.less
+++ b/less/blocks/blog.less
@@ -116,13 +116,13 @@
   padding-top: 5px;
   padding-right: 20px;
   padding-bottom: 20px;
-  padding-left: 20px;
+  padding-left: 35px;
 
   border-radius: 2px;
 
   transition: all 0.5s;
 
-  background-color: @bg-color-carrots;
+  background-color: #fff;
 
   &:hover {
     transition: all 0.5s;
@@ -143,10 +143,13 @@
 
 .blog-single__image {
   width: 45%;
+
+  outline: 2px solid @main-color;
 }
 
 .blog-single__image img {
   margin: 0 auto;
+  width: 80%;
 }
 
 .blog-single__content-wrapper {
@@ -154,7 +157,21 @@
 }
 
 .blog-single__title {
+  position: relative;
+  font-weight: 600;
+}
 
+.blog-single__title::before {
+  content: " ";
+  display: block;
+  position: absolute;
+
+  width: 3px;
+  height: 100%;
+
+  left: -15px;
+
+  background-color: @main-color;
 }
 
 .blog-single__content {
@@ -167,12 +184,11 @@
   padding-top: 25px;
   padding-bottom: 25px;
 
-  outline: 1px solid @style-color;
-
-  border-color: @style-color;
-  background-color: #f0f8ff;
+  border: none;
   font-weight: bold;
   font-style: italic;
+
+  box-shadow: 1px 0px 10px 0px rgba(0,163,236,1);
 }
 
 .blog-single__list {
@@ -198,7 +214,7 @@
   }
 
   .blog-single .container-article {
-    width: 80%;
+    max-width: 1000px;
   }
 
 }
