--- a/less/blocks/shop-showcase.less
+++ b/less/blocks/shop-showcase.less
@@ -20,10 +20,12 @@
 }
 
 .shop-showcase .container-article {
-  margin-bottom: 20px;
+  margin-bottom: 25px;
 
   overflow: hidden;
-  background-color: @bg-color-aqua;
+
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.16),
+              0 1px 4px 0 rgba(0, 0, 0, 0.12);
 
   transition: all 0.5s;
 }
@@ -38,13 +40,14 @@
 }
 
 .shop-showcase .container-article:hover {
-  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16),
-              0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  box-shadow: 1px 0px 10px 0px #00a3ec;
   transition: all 0.5s;
 }
 
-.shop-showcase .container-article:hover .shop-showcase__price {
-  color: @style-color;
+.shop-showcase .container-article:hover .shop-showcase__title {
+  color: @main-color;
+
+  transition: all 0.5s;
 }
 
 .shop-showcase__desc {
@@ -52,16 +55,16 @@
   padding-right: 10px;
 }
 
-.shop-showcase__title {
-
-}
-
 .shop-showcase__content {
 
 }
 
 .shop-showcase__price {
-  color: #999;
+  color: @main-color;
+
+  font-size: 16px;
+  font-weight: 600;
+  background-color: #f7f7f7;
 }
 
 .shop-showcase__thumb {
